Fixes wrapping of btn-toolbar

--- a/administrator/templates/atum/scss/blocks/_toolbar.scss
+++ b/administrator/templates/atum/scss/blocks/_toolbar.scss
@@ -19,7 +19,7 @@
 
   .btn-toolbar {
     margin-bottom: 0;
-
+    flex-wrap: nowrap;
     > * {
       margin-left: .75rem;
       box-shadow: $atum-box-shadow;
